fix layout problem of toast message after successful order

--- a/static/src/output.css
+++ b/static/src/output.css
@@ -1531,6 +1531,10 @@ input:checked + .toggle-bg {
   min-width: 24rem;
 }
 
+.min-w-20 {
+  min-width: 5rem;
+}
+
 .max-w-screen-xl {
   max-width: 1280px;
 }
